--- a/test.html
+++ b/test.html
@@ -1,77 +1,78 @@
 <!DOCTYPE html>
 <head>
 	<style>
-	.box {background-color:whitesmoke;}
-	h2 {color:green;}
+	.box {background-color:whitesmoke;padding-left:40px; padding-top:2px; padding-bottom:20px;position:relative;left:50px;top;50px;}
+	 h2 {color:green;}
+	.button1 { border-radius:8px; background-color:white; color:green; font-size:15px; padding-left:16px;padding-right:16px;}
+	.button {background-color:white; color:green; font-size:15px; padding-left:16px;padding-right:16px;border-color:green;}
 	</style>
 	<h1>Content Store</h1>
 </head>
 <body>
-	<div class ="box">
+	<div class ="box" >
 	<h2>Get bulk orders...</h2>
 	If you're wondering about...<br></br>
 	<br></br>
-	<input type="submit" value="order"/>
+	<input type="submit" class="button1" value="order"/>
 	</pre></div>
 	
 	<table border="0" cellspacing="10" width="75%">
 	<tr>
-	<td><div class ="box">
-	<h3>Blog/Article</h3>
+	<td><div class ="box"><img src="1.png" height="42" width="42" align="left" hspace="10px"><h3>Blog/Article</h3>
 	     from 500<br></br>
-		<input type="submit" value="order"/>
+		<input type="submit" class="button" value="order"/>
 		</div>
 	</td>
-	<td><div class ="box">
+	<td><div class ="box"><img src="2.png" height="42" width="42" align="left" hspace="10px">
 	<h3>Newsletter/Emailer</h3>
 	     from 1000<br></br>
-		<input type="submit" value="order"/>
+		<input type="submit" class="button" value="order"/>
 		</div>
 	</td>
-	<td><div class ="box">
+	<td><div class ="box"><img src="3.png" height="42" width="42" align="left" hspace="10px">
 	<h3>Whitepaper</h3>
 	     from 2000<br></br>
-		<input type="submit" value="order"/>
+		<input type="submit" class="button" value="order"/>
 		</div>
 	</td>
 	</tr>
 	<tr>
-	<td><div class ="box">
-	<h3>Blog/Article</h3>
-	     from 500<br></br>
-		<input type="submit" value="order"/>
-		</div>
-	</td>
-	<td><div class ="box">
-	<h3>Newsletter/Emailer</h3>
+	<td><div class ="box"><img src="4.png" height="42" width="42" align="left" hspace="10px">
+	<h3>e-book</h3>
 	     from 1000<br></br>
-		<input type="submit" value="order"/>
+		<input type="submit" class="button" value="order"/>
 		</div>
 	</td>
-	<td><div class ="box">
-	<h3>Whitepaper</h3>
-	     from 2000<br></br>
-		<input type="submit" value="order"/>
+	<td><div class ="box"><img src="5.png" height="42" width="42" align="left" hspace="10px">
+	<h3>Report Guide</h3>
+	     from 1000<br></br>
+		<input type="submit" class="button" value="order"/>
+		</div>
+	</td>
+	<td><div class ="box"><img src="6.png" height="42" width="42" align="left" hspace="10px">
+	<h3>Product Description</h3>
+	     from 500<br></br>
+		<input type="submit" class="button" value="order"/>
 		</div>
 	</td>
 	</tr>
 	<tr>
-	<td><div class ="box">
-	<h3>Blog/Article</h3>
-	     from 500<br></br>
-		<input type="submit" value="order"/>
-		</div>
-	</td>
-	<td><div class ="box">
-	<h3>Newsletter/Emailer</h3>
+	<td><div class ="box"><img src="7.png" height="42" width="42" align="left" hspace="10px">
+	<h3>Website Content</h3>
 	     from 1000<br></br>
-		<input type="submit" value="order"/>
+		<input type="submit" class="button" value="order"/>
 		</div>
 	</td>
-	<td><div class ="box">
-	<h3>Whitepaper</h3>
+	<td><div class ="box"><img src="8.png" height="42" width="42" align="left" hspace="10px">
+	<h3>Videoscript</h3>
+	     from 1000<br></br>
+		<input type="submit" class="button" value="order"/>
+		</div>
+	</td>
+	<td><div class ="box"><img src="9.png" height="42" width="42" align="left" hspace="10px">
+	<h3>Brocher</h3>
 	     from 2000<br></br>
-		<input type="submit" value="order"/>
+		<input type="submit" class="button" value="order"/>
 		</div>
 	</td>
 	</tr>
