--- a/test.html
+++ b/test.html
@@ -18,7 +18,7 @@
 	
 	<table border="0" cellspacing="10" width="75%">
 	<tr>
-	<td><div class ="box"><img src="1.png" height="42" width="42" align="left" hspace="10px"><h3>Blog/Article</h3>
+	<td><div class ="box"><img src="images/1.png" height="42" width="42" align="left" hspace="10px"><h3>Blog/Article</h3>
 	     from 500<br></br>
 		<input type="submit" class="button" value="order"/>
 		</div>
