--- a/test.html
+++ b/test.html
@@ -23,13 +23,13 @@
 		<input type="submit" class="button" value="order"/>
 		</div>
 	</td>
-	<td><div class ="box"><img src="2.png" height="42" width="42" align="left" hspace="10px">
+	<td><div class ="box"><img src="images/2.png" height="42" width="42" align="left" hspace="10px">
 	<h3>Newsletter/Emailer</h3>
 	     from 1000<br></br>
 		<input type="submit" class="button" value="order"/>
 		</div>
 	</td>
-	<td><div class ="box"><img src="3.png" height="42" width="42" align="left" hspace="10px">
+	<td><div class ="box"><img src="images/3.png" height="42" width="42" align="left" hspace="10px">
 	<h3>Whitepaper</h3>
 	     from 2000<br></br>
 		<input type="submit" class="button" value="order"/>
@@ -37,19 +37,19 @@
 	</td>
 	</tr>
 	<tr>
-	<td><div class ="box"><img src="4.png" height="42" width="42" align="left" hspace="10px">
+	<td><div class ="box"><img src="images/4.png" height="42" width="42" align="left" hspace="10px">
 	<h3>e-book</h3>
 	     from 1000<br></br>
-		<input type="submit" class="button" value="order"/>
+		<input type="images/submit" class="button" value="order"/>
 		</div>
 	</td>
-	<td><div class ="box"><img src="5.png" height="42" width="42" align="left" hspace="10px">
+	<td><div class ="box"><img src="images/5.png" height="42" width="42" align="left" hspace="10px">
 	<h3>Report Guide</h3>
 	     from 1000<br></br>
 		<input type="submit" class="button" value="order"/>
 		</div>
 	</td>
-	<td><div class ="box"><img src="6.png" height="42" width="42" align="left" hspace="10px">
+	<td><div class ="box"><img src="images/6.png" height="42" width="42" align="left" hspace="10px">
 	<h3>Product Description</h3>
 	     from 500<br></br>
 		<input type="submit" class="button" value="order"/>
@@ -57,19 +57,19 @@
 	</td>
 	</tr>
 	<tr>
-	<td><div class ="box"><img src="7.png" height="42" width="42" align="left" hspace="10px">
+	<td><div class ="box"><img src="images/7.png" height="42" width="42" align="left" hspace="10px">
 	<h3>Website Content</h3>
 	     from 1000<br></br>
 		<input type="submit" class="button" value="order"/>
 		</div>
 	</td>
-	<td><div class ="box"><img src="8.png" height="42" width="42" align="left" hspace="10px">
+	<td><div class ="box"><img src="images/8.png" height="42" width="42" align="left" hspace="10px">
 	<h3>Videoscript</h3>
 	     from 1000<br></br>
 		<input type="submit" class="button" value="order"/>
 		</div>
 	</td>
-	<td><div class ="box"><img src="9.png" height="42" width="42" align="left" hspace="10px">
+	<td><div class ="box"><img src="images/9.png" height="42" width="42" align="left" hspace="10px">
 	<h3>Brocher</h3>
 	     from 2000<br></br>
 		<input type="submit" class="button" value="order"/>
