--- a/test.html
+++ b/test.html
@@ -57,7 +57,7 @@
 	</td>
 	</tr>
 	<tr>
-	<td><div class ="box"><img src="images/7.png" height="42" width="42" align="left" hspace="10px">
+	<td><div class ="box"><img src="images/7.jpg" height="42" width="42" align="left" hspace="10px">
 	<h3>Website Content</h3>
 	     from 1000<br></br>
 		<input type="submit" class="button" value="order"/>
